// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationToolbar should render with provided logo and utility props 1`] = `
<div>
  <div
    className="toolbar-splash"
  />
  <div
    className="toolbar"
  >
    <div
      className="toolbar-body"
    >
      <div
        className="start"
      >
        <Logo
          size="tiny"
        />
      </div>
      <div
        className="end"
      >
        <Utility
          size="tiny"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ApplicationToolbar should render without optional props 1`] = `
<div>
  <div
    className="toolbar-splash"
  />
  <div
    className="toolbar"
  />
</div>
`;
